k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: servicemesh
  labels: 
    istio-injection: enabled
