k8s/usuarios-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: usuarios-v2
  namespace: servicemesh 
  labels: 
    app: usuarios
    version: v2
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: usuarios
      version: v2
  template:
    metadata:
      labels:
        app: usuarios
        version: v2
    spec: 
      containers:
        - name: usuarios
          image: usuarios-service:v2
          ports:
          - containerPort: 8000
