k8s/productos-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: productos-v1
  namespace: servicemesh
  labels:
    app: productos
    version: v1
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: productos
      version: v1
  template:
    metadata:
      labels:
        app: productos
        version: v1
    spec:
      containers:
        - name: productos
          image: productos-service:v1
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service 
metadata: 
  name: productos-service
  namespace: servicemesh
spec:
  selector:
    app: productos
  ports:
  - port: 80 
    targetPort: 8000
