k8s/usuarios-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: usuarios-v1
  namespace: servicemesh
  labels: 
    app: usuarios
    version: v1 #el label de version es critico para DestinationRule
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: usuarios
      version: v1
  template: 
    metadata:
      labels:
        app: usuarios
        version: v1
    spec: 
      containers:
        - name: usuarios
          image: usuarios-service:v1
          ports: 
          - containerPort: 8000
---
apiVersion: v1
kind: Service 
metadata: 
  name: usuarios-service
  namespace: servicemesh
spec:
  selector:
    app: usuarios #seleccona todas las versiones
  ports:
  - port: 80
    targetPort: 8000
