k8s/usuarios-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
  name: usuarios-destination
  namespace: servicemesh 
spec:
  host: usuarios-service
  subsets:
  - name: v1
    labels:
      version: v1 #Pods con label de version: v1
  - name: v2
    labels:
      version: v2 #Pod con label version: 2
