k8s/usuarios-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: usuarios-vs
  namespace: servicemesh
spec:
  hosts:
  - usuarios-service
  http:
  - route:
    - destination:
        host: usuarios-service
        subset: v1
      weight: 90 #90% para usuarios-service v1
    - destination:
        host: usuarios-service
        subset: v2
      weight: 10 #10% para usuarios-service v2
    timeout: 5s #Timeouts y retries automáticos
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx,reset,connect-failure
